--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ colorama==0.4.6
 confection==0.1.5
 cymem==2.0.11
 defusedxml==0.7.1
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 et_xmlfile==2.0.0
 idna==3.10
 Jinja2==3.1.6
@@ -19,7 +20,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 murmurhash==1.0.13
-numpy==2.2.6
+numpy==2.3.1
 openpyxl==3.1.5
 packaging==25.0
 pandas==2.2.3
@@ -28,6 +29,7 @@ pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 pytz==2025.2
 requests==2.32.3
 rich==14.0.0
